# rstudio

src/cpp/: CMakeLists.txt
src/cpp/core/include/core/system/: Process.hpp
src/cpp/core/system/: Win32ChildProcess.cpp
src/cpp/session/detach/: CMakeLists.txt  DetachMain.cpp
src/cpp/session/postback/: rpostback-gitssh
src/gwt/: build.xml
src/gwt/src/org/rstudio/studio/: RStudio.gwt.xml.in
src/gwt/src/org/rstudio/studio/common/: Common.gwt.xml
src/gwt/src/org/rstudio/studio/common/client/: CommonWidget.java
src/gwt/src/org/rstudio/studio/vcs/: VCS.gwt.xml
src/gwt/src/org/rstudio/studio/vcs/client/: Commands.java  VCS.java  VCSGinModule.java  VCSGinjector.java
